@@ -1,18 +1,24 @@
 (defpackage #:40ants-doc/render/print
   (:use #:cl)
-  (:import-from #:40ants-doc/markdown/transform))
+  (:import-from #:40ants-doc/markdown/transform)
+  (:import-from #:40ants-doc/utils))
 (in-package 40ants-doc/render/print)
 
 ;;; Print (DOCUMENTATION OBJECT DOC-TYPE) to STREAM in FORMAT. Clean
 ;;; up docstring indentation, then indent it by four spaces.
 ;;; Automarkup symbols.
 (defun maybe-print-docstring (object doc-type stream &key break)
-  (let ((*package* (typecase object
-                     (symbol
-                      (symbol-package object))
-                     (t
-                      *package*))))
+  (let* ((package (40ants-doc/utils::object-package object))
+         (*package* package
+           ;; We need to set the package to the object's package
+           ;; to because in package inferred systems documentation
+           ;; section can referer objects from other sub-packages.
+           ;; If we don't do this, then argument reference will not
+           ;; work and uppercased words will not become `CODE`:
+           ;; (40ants-doc/utils::object-package object)
+           ))
     (let ((docstring (filter-documentation object doc-type)))
+      ;; TODO: remove after debug
       (when break
         (break))
       (when docstring
