@@ -9,3 +9,6 @@ because all locative symbols now live in 40ANTS-DOC/LOCATIVES package.
 * Removed mgl-pax:define-package macro. An uiop:define-package can be used instead.
 * Now builder issues a warning if it wasn't able to find a symbol mentioned in the docstring.
 * Uppercase word should have at least two charaters to be resolved as a symbol.
+* Improved work with package inferred systems. For examples, when fixed the
+automatic symbol rendering for case when documentation section and
+referenced objects are in different packages.
